--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div>Home</div>
       <div>Mens</div>
       <div>Womens</div>
+      <div>Login/signup</div>
     </div>
   </body>
 </html>
