added womens page

--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      #container {
+        display: flex;
+        justify-content: space-evenly;
+        background-color: teal;
+        color: white;
+        font-size: 30px;
+        padding: 20px;
+      }
+    </style>
+  </head>
 
-<head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
-      <style>
-            #container {
-                  display: flex;
-                  justify-content: space-evenly;
-                  background-color: teal;
-                  color: white;
-                  font-size: 30px;
-                  padding: 20px;
-            }
-      </style>
-</head>
-
-<body>
-      <!-- <h1>Base file of project</h1> -->
-      <div id="container">
-            <div>Home</div>
-            <div><a href="men.html">Mens</a></div>
-            <div>Womens</div>
-            <div>Login/signup</div>
-      </div>
-</body>
-
+  <body>
+    <!-- <h1>Base file of project</h1> -->
+    <div id="container">
+      <div>Home</div>
+      <div><a href="men.html">Mens</a></div>
+      <div><a href="womens.html">Womens</a></div>
+      <div>Login/signup</div>
+    </div>
+  </body>
 </html>
