added common styles

--- a/men.html
+++ b/men.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/commonstyles.css" />
   </head>
 
   <body>
     <h4>Men's Page</h4>
     <h1>Banner for mens page</h1>
+    <button class="btn-outer">Submit</button>
   </body>
 </html>
