--- a/womens.html
+++ b/womens.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
-</head>
-<body>
-      <h1>Womens page</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, rem.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles/commonstyles.css" />
+  </head>
+  <body>
+    <h1>Womens page</h1>
+    <button class="btn-outer">Submit</button>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, rem.</p>
+  </body>
 </html>
