chaged mens page

--- a/men.html
+++ b/men.html
@@ -11,6 +11,7 @@
   <body>
     <h4>Men's Page</h4>
     <h1>Banner for mens page</h1>
+    <h2>Mens page</h2>
     <button class="btn-outer">Submit</button>
   </body>
 </html>
